ready to submit to PLOS ONE?

--- a/dsmixtures-appendix-s2.tex
+++ b/dsmixtures-appendix-s2.tex
@@ -80,7 +80,7 @@ where $\lambda=\exp(\beta_1)$ is a scale parameter and $b_1$ is a \textit{shape 
 
 The formulation for the hazard-rate mixture in simulation E2 was:
 \begin{equation*}
-g(y,\mathbf{z}; \mathbf{\theta}, \mathbf{\phi}) = \sum_{j=1}^J \phi_j (1-\exp(-(y/\sigma_j)^{-b_j})),
+g(y,\mathbf{z}; \boldsymbol{\theta}, \boldsymbol{\phi}) = \sum_{j=1}^J \phi_j (1-\exp(-(y/\sigma_j)^{-b_j})),
 \end{equation*}
 where $b_j$ is the shape parameter associated with the $j^\text{th}$ mixture component.
 
