--- a/dsmixtures-text-s2.tex
+++ b/dsmixtures-text-s2.tex
@@ -75,7 +75,7 @@ In the most general case, the variance of $\hat{N}$ is estimated by:
 \begin{equation*}
 \hat{\text{Var}}\left( \hat{N} \right) = \left(\frac{\partial \hat{N}}{\partial\hat{\mathbf{\Theta}}}\right)^\text{T}\hat{\mathbf{I}}(\hat{\mathbf{\Theta}})^{-1}\frac{\partial \hat{N}}{\partial\hat{\mathbf{\Theta}}} + \sum_{i=1}^n \frac{(1-p_i)}{p_i^2}
 \end{equation*}
-where $\hat{\mathbf{I}}(\hat{\mathbf{\Theta}})^{-1}$ is the inverse of the Fisher information matrix,  $\hat{\mathbf{\Theta}}$ is a vector of all of the maximum likelihood estimates of the parameters of the detection function ($\hat{\mathbf{\Theta}}=(\hat{\mathbf{\theta}},\hat{\mathbf{\phi}})$) and all other notation is as in previous sections.
+where $\hat{\mathbf{I}}(\hat{\mathbf{\Theta}})^{-1}$ is the inverse of the Fisher information matrix,  $\hat{\mathbf{\Theta}}$ is a vector of all of the maximum likelihood estimates of the parameters of the detection function ($\hat{\mathbf{\Theta}}=(\hat{\boldsymbol{\theta}},\hat{\boldsymbol{\phi}})$) and all other notation is as in previous sections.
 
 Then for the average detectability:
 \begin{align*}
